# drone_following_and_landing

aruco_detector/: CMakeLists.txt  README.md  package.xml
aruco_detector/include/aruco_detector/: camera.h  detector.h
aruco_detector/launch/: launch.launch
aruco_detector/src/: camera.cpp  detector.cpp  main.cpp
camera_calibration/: .gitignore  dwe_cam.yaml  iphone_calibration_coef.yaml
camera_calibration/src/: calibrate_from_images.py  extract_frame.py
camera_publisher/: CMakeLists.txt  package.xml
camera_publisher/src/: airsim_camera.py  physical_camera.cpp  physical_camera.h
fiducial_detector/: CMakeLists.txt  README.md  package.xml
fiducial_detector/calibration/camera_calibration/: calibrate.py  calibration_data.txt  convert.py  draft.py  open_undistorted_video.py  remap.py
fiducial_detector/images/: aruco_pg1_offset.yaml  aruco_pg1_offset_common.yaml  aruco_pg2_offset.yaml  aruco_pg2_offset_common.yaml  aruco_pg3_offset.yaml  aruco_pg4_offset.yaml  aruco_pg4_offset_common.yaml  landing_pad.yaml  landing_pad_scaled.yaml  marker_size.yaml  marker_size_draft.yaml  marker_size_draft_updated.yaml  mass_edit_marker_size.py  merge_yamls.py  output.yaml
fiducial_detector/include/fiducial_detector/: detector.h
fiducial_detector/launch/: fiducial_detector.launch
fiducial_detector/scripts/: add_common_offset.cpp  find_all_aruco_offsets.cpp  scale_common_offset.cpp
fiducial_detector/src/: detect_one_image.cpp  detector.cpp  detector.h  main.cpp
fiducial_detector/yaml/: iphone_calibration.yaml  landing_pad_final.yaml
pid_controller/: CMakeLists.txt  package.xml
pid_controller/config/: pid_params.yaml  topics.yaml
pid_controller/include/pid_controller/: follow_relative_ned.h  pid.h
pid_controller/launch/: pid_vehicle_following.launch
pid_controller/src/: follow_relative_ned.cpp  main.cpp  pid.cpp
target_tracking_planner/: CMakeLists.txt  package.xml
target_tracking_planner/include/target_tracking_planner/: gps_to_ned.h  offset_relative_ned_position.h  relative_ned_position.h
target_tracking_planner/launch/: target_tracking.launch
target_tracking_planner/src/: gps_to_ned.cpp  offset_relative_ned_position.cpp  relative_ned_position.cpp
